# kutu

./: CMakeLists.txt  computer.cpp  computer.h  highlighter.cpp  highlighter.h  language.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  test_computer.cpp
examples/: 01.txt  03.txt
